task: Implement route animations and resolve CSS layout issues

--- a/mfe-shell-container/src/app/components/home/home.component.scss
+++ b/mfe-shell-container/src/app/components/home/home.component.scss
@@ -12,6 +12,7 @@
 }
 
 .content {
+  position: relative;
   padding: 16px;
   height: 100%;
   overflow: auto;
